--- a/src/main/webapp/resources/css/j_mypage.css
+++ b/src/main/webapp/resources/css/j_mypage.css
@@ -4,7 +4,8 @@
 .mypage {
 	width: 65%;
 	height: 100vh;
-	margin-top: 250px;
+	margin: 0 auto;
+	padding-top: 250px;
 	display: flex;
 }
 
@@ -24,6 +25,7 @@
 	padding: 10px;
 	font-size: 20px;
 	font-weight: 700;
+	cursor: pointer;
 }
 
 .mypage>nav>ul>li>ul>li {
